Update to use pms3003 sensor and print success only for success

--- a/fetchConfig.json
+++ b/fetchConfig.json
@@ -11,7 +11,7 @@
   	"sds011_sensor_43258",
   	"sds011_sensor_43295",
   	"sds011_sensor_43295",
-  	"sds011_sensor_43825",
+  	"pms3003_sensor_43825",
   	"sds011_sensor_44016",
   	"sds011_sensor_46879",
   	"sds011_sensor_46881",
