--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,5 +27,8 @@ jobs:
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2
       with:
-        # Artifact name
-        name: build/distributions/sensorsfetch.zip
+        # Artifact path
+        path: build/distributions
+  - name: Display structure of downloaded files
+    run: ls -R
+    working-directory: build
