--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build distZip
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build distZip
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2
       with:
