--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,8 +26,8 @@ jobs:
       uses: eskatos/gradle-command-action@v1
       with:
         arguments: build distZip
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v2
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
       with:
         # Artifact path
         path: build/distributions
