--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,4 +24,5 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        path: build/distributions/sensorsfetch.zip
+        name: sensorfetch
+        path: build/distributions/sensorsfetch-*.zip
